# adoctl

./: AGENTS.md  Features.md  Key-Results.md  Linking.md  README.md  Risks.md  TODO.md  agent_portable_instructions.md  data.json  environment.yml  error.md  extract_ado.py  pyproject.toml  specs.md
adoctl/: __init__.py  __main__.py
adoctl/ado_client/: auth.py  http.py  models.py
adoctl/cli/: home.py  main.py
adoctl/config/: context.py  contract_export.py  contract_lint.py  contract_loader.py  instruction_set_export.py  paths.py  wiki_policy_bootstrap.py
adoctl/outbox/: __init__.py  validate.py  write.py
adoctl/sync/: ado_sync.py  wit_bootstrap.py
adoctl/util/: fs.py  url.py  yaml_emit.py
config/local/: context.yaml  project_defaults.yaml
config/policy/: field_map.yaml  field_policy.yaml  kr_taxonomy.yaml  link_policy.yaml  standards.yaml  team_defaults.yaml  wit_map.yaml
docs/: Blockers.md  Critical-Business-Decisions.md  Iterations.md  Project-Request.md  User-Stories.md  Work-Items.md  agent_portable_instructions.md  roadmap.md  specs.md
examples/: test_bundle.json
instruction_set/: 01_required_inputs.md  02_contracts_and_rules.md  03_output_expectations.md  04_generation_workflow.md  05_efficiency_notes.md  README.md  instruction_set.md
schema/: bundle.schema.json
tests/: test_context.py  test_contract_config.py  test_contract_lint.py  test_home.py  test_http.py  test_instruction_set_export.py  test_outbox_validate.py  test_outbox_write.py  test_sync_planning.py  test_url.py  test_wiki_policy_bootstrap.py  test_wit_bootstrap.py
(+6 files in other folders)
