[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adoctl"
version = "0.1.0"
description = "Azure DevOps decomposition outbox + writer CLI"
readme = "README.md"
requires-python = ">=3.11"
requires-python = ">=3.8"
dependencies = ["requests", "PyYAML", "jsonschema>=4,<5"]

[project.scripts]
adoctl = "adoctl.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["adoctl*"]
